@@ -39,6 +39,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|hbase
+operator|.
+name|HConstants
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|util
 operator|.
 name|ReflectionUtils
@@ -77,7 +91,9 @@ name|conf
 operator|.
 name|getClass
 argument_list|(
-literal|"hbase.maser.loadBalancer.class"
+name|HConstants
+operator|.
+name|HBASE_MASTER_LOADBALANCER_CLASS
 argument_list|,
 name|DefaultLoadBalancer
 operator|.
