@@ -477,6 +477,7 @@ Release 0.92.0 - Unreleased
                it will affect read correctness (Chunhui)
    HBASE-5137  MasterFileSystem.splitLog() should abort even if waitOnSafeMode() throws IOException(Ted)
    HBASE-5121  MajorCompaction may affect scan's correctness (chunhui shen and Lars H)
+   HBASE-5143  Fix config typo in pluggable load balancer factory (Harsh J)
 
   TESTS
    HBASE-4450  test for number of blocks read: to serve as baseline for expected
